--- a/about_us.html
+++ b/about_us.html
@@ -114,6 +114,7 @@
           <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="#">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
