--- a/face_id.html
+++ b/face_id.html
@@ -7,58 +7,55 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;600&family=Rubik:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <title>Scan - Start Your Journey</title>
+    <title>Face Scan</title>
     <!-- css -->
-    <link rel="stylesheet" href="style/main_header.css" />
+    <link rel="stylesheet" href="./style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
-    <link rel="stylesheet" href="./style/scan.css" />
-    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
-    <!-- menu -->
-    <section class="o">
-      <div class="menu">
-        <h2>F-LOCK</h2>
-        <a href="./menu.html">
-          <img
-            src="./design/SOURCE_IMAGE/Menu.png"
-            alt="menu"
-            class="icon_menu"
-          />
-        </a>
-      </div>
-      <hr />
-    </section>
-    <!-- header -->
+    <link rel="stylesheet" href="./style/face_id.css" />
+  </head>
+  <!-- header -->
+  <section class="o">
+    <div class="menu">
+      <h2>F-LOCK</h2>
+      <a href="./menu.html">
+        <img
+          src="./design/SOURCE_IMAGE/Menu.png"
+          alt="menu"
+          class="icon_menu"
+        />
+      </a>
+    </div>
+    <hr />
+  </section>
+  <body>
     <div class="header">
       <p id="row1">Our people</p>
       <h1>We are the better together</h1>
-
       <p id="row3">
-        Together, we create a positive impact. Meet the Dapixel team and see how
-        we turn great ideas into results
+        Together, we create a positive impact. Meet the F-LOCK team and see how
+        we turn great ideas into results.
       </p>
     </div>
-  </head>
-  <!-- content -->
-  <body>
-    <div class="face-scan-wrapper">
-      <img
-        src="./design/SOURCE_IMAGE/scan.jpg"
-        alt="face scan"
-        class="face_scan"
-      />
-    </div>
-    <div class="more-info">
-      <h1>We are the better together</h1>
+
+    <!-- content -->
+    <div class="face-scan-section">
+      <div class="face-scan-wrapper">
+        <img
+          src="./design/SOURCE_IMAGE/scan.jpg"
+          alt="face scan"
+          class="face_scan"
+        />
+        <button class="take-btn" onclick="startCapture()">Take</button>
+      </div>
     </div>
     <!-- script -->
     <script src="./backend/camera_client.js"></script>
     <script src="./backend/camera_loader.js"></script>
     <script src="./backend/camera_pi.js"></script>
   </body>
-
   <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
@@ -74,7 +71,6 @@
           <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="about_us.html">About</a>
-          <a href="./face_res.html">ID</a>
         </nav>
       </div>
 
