--- a/guild.html
+++ b/guild.html
@@ -108,6 +108,7 @@
           <a href="#">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="about_us.html">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
