--- a/open.html
+++ b/open.html
@@ -90,6 +90,7 @@
           <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="about_us.html">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
