--- a/register.html
+++ b/register.html
@@ -43,7 +43,9 @@
     <div class="register-container">
       <!-- Bên trái: Ảnh -->
       <div class="left-side">
-        <img src="./design/SOURCE_IMAGE/scan.jpg" alt="Scan Face" />
+        <a href="./face_res.html"
+          ><img src="./design/SOURCE_IMAGE/scan.jpg" alt="Scan Face"
+        /></a>
       </div>
 
       <!-- Bên phải: Form -->
@@ -140,6 +142,7 @@
           <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="about_us.html">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
