--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
           <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="about_us.html">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
