--- a/logon.html
+++ b/logon.html
@@ -78,7 +78,8 @@
           <a href="index.html">Home</a>
           <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
-          <a href="#">About</a>
+          <a href="about_us.html">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
