--- a/open.html
+++ b/open.html
@@ -73,6 +73,7 @@
         </a>
       </div>
     </div>
+    <!-- script -->
     <script src="./backend/auth_protect.js"></script>
   </body>
   <!-- footer -->
@@ -85,6 +86,7 @@
           biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
           mật hơn!
         </p>
+
         <nav class="footer-nav">
           <a href="index.html">Home</a>
           <a href="guild.html">User Guide</a>
