--- a/register.html
+++ b/register.html
@@ -124,10 +124,11 @@
       </div>
     </div>
 
-    <!-- ... phía dưới giữ nguyên ... -->
+    <!-- ... script ... -->
 
     <script src="./backend/register.js"></script>
   </body>
+  <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
       <div class="footer-left">
