--- a/html/face_id.html
+++ b/html/face_id.html
@@ -12,9 +12,9 @@
     />
     <title>Face Scan</title>
     <!-- css -->
-    <link rel="stylesheet" href="./style/main_header.css" />
-    <link rel="stylesheet" href="./style/main_footer.css" />
-    <link rel="stylesheet" href="./style/face_id.css" />
+    <link rel="stylesheet" href="../style/main_header.css" />
+    <link rel="stylesheet" href="../style/main_footer.css" />
+    <link rel="stylesheet" href="../style/face_id.css" />
   </head>
   <!-- header -->
   <section class="o">
@@ -22,7 +22,7 @@
       <h2>F-LOCK</h2>
       <a href="./menu.html">
         <img
-          src="./design/SOURCE_IMAGE/Menu.png"
+          src="../design/SOURCE_IMAGE/Menu.png"
           alt="menu"
           class="icon_menu"
         />
@@ -44,7 +44,7 @@
     <div class="face-scan-section">
       <div class="face-scan-wrapper">
         <img
-          src="./design/SOURCE_IMAGE/scan.jpg"
+          src="../design/SOURCE_IMAGE/scan.jpg"
           alt="face scan"
           class="face_scan"
         />
@@ -53,11 +53,11 @@
     </div>
 
     <!-- script -->
-    <script src="./backend/camera_client.js"></script>
-    <script src="./backend/camera_loader.js"></script>
-    <script src="./backend/camera_pi.js"></script>
+    <script src="../backend/camera_client.js"></script>
+    <script src="../backend/camera_loader.js"></script>
+    <script src="../backend/camera_pi.js"></script>
   </body>
-  
+
   <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
