--- a/html/register.html
+++ b/html/register.html
@@ -12,9 +12,9 @@
     />
     <title>Register - Start Your Journey</title>
     <!-- css -->
-    <link rel="stylesheet" href="style/main_header.css" />
-    <link rel="stylesheet" href="./style/register.css" />
-    <link rel="stylesheet" href="./style/main_footer.css" />
+    <link rel="stylesheet" href="../style/main_header.css" />
+    <link rel="stylesheet" href="../style/register.css" />
+    <link rel="stylesheet" href="../style/main_footer.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
   </head>
   <body>
@@ -24,7 +24,7 @@
         <h2>F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="./design/SOURCE_IMAGE/Menu.png"
+            src="../design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -44,7 +44,7 @@
       <!-- Bên trái: Ảnh -->
       <div class="left-side">
         <a href="./face_res.html"
-          ><img src="./design/SOURCE_IMAGE/scan.jpg" alt="Scan Face"
+          ><img src="../design/SOURCE_IMAGE/scan.jpg" alt="Scan Face"
         /></a>
       </div>
 
@@ -118,7 +118,7 @@
           <button type="submit" class="btn">SAVE</button>
           <p class="login-hint">
             If you already have an account, please click
-            <a href="logon.html">log on</a>
+            <a href="./logon.html">log on</a>
           </p>
         </form>
       </div>
@@ -126,7 +126,7 @@
 
     <!-- ... script ... -->
 
-    <script src="./backend/register.js"></script>
+    <script src="../backend/register.js"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
@@ -139,11 +139,11 @@
           mật hơn!
         </p>
         <nav class="footer-nav">
-          <a href="index.html">Home</a>
-          <a href="guild.html">User Guide</a>
-          <a href="open.html">Open Locker</a>
-          <a href="about_us.html">About</a>
-          <a href="face_res.html">ID</a>
+          <a href="./index.html">Home</a>
+          <a href="./guild.html">User Guide</a>
+          <a href="./open.html">Open Locker</a>
+          <a href="./about_us.html">About</a>
+          <a href="./face_res.html">ID</a>
         </nav>
       </div>
 
