--- a/about_us.html
+++ b/about_us.html
@@ -13,9 +13,9 @@
     />
     <title>About us</title>
     <!-- css -->
-    <link rel="stylesheet" href="../style/main_header.css" />
-    <link rel="stylesheet" href="../style/main_footer.css" />
-    <link rel="stylesheet" href="../style/face_res.css" />
+    <link rel="stylesheet" href="style/main_header.css" />
+    <link rel="stylesheet" href="./style/main_footer.css" />
+    <link rel="stylesheet" href="./style/about_us.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
     <!-- menu -->
     <section class="o">
@@ -23,7 +23,7 @@
         <h2>F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="../design/SOURCE_IMAGE/Menu.png"
+            src="./design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -35,29 +35,68 @@
     <!-- header -->
 
     <div class="header">
-      <p id="row1">wellcome</p>
-      <h1>Please select a registration method</h1>
+      <p id="row1">Our people</p>
+      <h1>We are the better together</h1>
+
+      <p id="row3">
+        Together, we create a positive impact. Meet the Dapixel team and see how
+        we turn great ideas into results
+      </p>
     </div>
   </head>
-  <!-- body -->
   <body>
     <div class="team-section">
       <div class="team-grid">
         <div class="team-card">
-          <a href="./face_id.html"
-            ><img src="../design/SOURCE_IMAGE/faceid.png" alt="member"
-          /></a>
-          <h3>Face ID</h3>
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>QUÝ MC</h3>
+          <p class="role">Product Designer</p>
         </div>
+
         <div class="team-card">
-          <a href="./pass_lock.html">
-            <img src="../design/SOURCE_IMAGE/smartkey.png" alt="member"
-          /></a>
-          <h3>Password</h3>
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>QUỐC CƯỜNG</h3>
+          <p class="role">Product Designer</p>
+        </div>
+
+        <div class="team-card">
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>THẦY TRÍ</h3>
+          <p class="role">Assistant</p>
+        </div>
+
+        <div class="team-card">
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>THẦY TUẤN ANH</h3>
+          <p class="role">Assistant</p>
+        </div>
+
+        <div class="team-card">
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>CLIENT</h3>
+          <p class="role">Member</p>
+        </div>
+
+        <div class="team-card">
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>CLIENT</h3>
+          <p class="role">Member</p>
+        </div>
+
+        <div class="team-card">
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>CLIENT</h3>
+          <p class="role">Member</p>
+        </div>
+
+        <div class="team-card">
+          <img src="./design/SOURCE_IMAGE/human.jpg" alt="member" />
+          <h3>CLIENT</h3>
+          <p class="role">Member</p>
         </div>
       </div>
     </div>
-    <!-- <script src="./backend/auth_protect.js"></script> -->
+    <script src="./backend/auth_protect.js"></script>
   </body>
 
   <!-- footer -->
@@ -70,12 +109,13 @@
           biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
           mật hơn!
         </p>
+
         <nav class="footer-nav">
-          <a href="./index.html">Home</a>
-          <a href="./guild.html">User Guide</a>
-          <a href="./open.html">Open Locker</a>
-          <a href="./about_us.html">About</a>
-          <a href="#">ID</a>
+          <a href="index.html">Home</a>
+          <a href="guild.html">User Guide</a>
+          <a href="open.html">Open Locker</a>
+          <a href="#">About</a>
+          <a href="face_res.html">ID</a>
         </nav>
       </div>
 
