--- a/guild.html
+++ b/guild.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
     />
     <title>Services - F-LOCK</title>
-    <link rel="stylesheet" href="../style/main_header.css" />
-    <link rel="stylesheet" href="../style/main_footer.css" />
-    <link rel="stylesheet" href="../style/guild.css" />
-    <link rel="stylesheet" href="../style/responsive.css" />
+    <link rel="stylesheet" href="./style/main_header.css" />
+    <link rel="stylesheet" href="./style/main_footer.css" />
+    <link rel="stylesheet" href="./style/guild.css" />
+    <link rel="stylesheet" href="./style/responsive.css" />
   </head>
   <body>
     <!-- menu -->
@@ -23,7 +23,7 @@
         <h2 id="logo">F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="../design/SOURCE_IMAGE/Menu.png"
+            src="./design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -37,7 +37,7 @@
         <h2 class="main-heading">Services We Offer</h2>
         <p class="desc">Discover what we do and how we can help</p>
         <div class="video-frame">
-          <img src="../design/SOURCE_IMAGE/8.png" alt="Video" />
+          <img src="./design/SOURCE_IMAGE/8.png" alt="Video" />
           <div class="play-btn">▶</div>
         </div>
       </section>
@@ -52,11 +52,7 @@
       </p>
       <div class="card-container">
         <div class="card">
-          <img
-            src="../design/SOURCE_IMAGE/D.png"
-            alt="icon"
-            class="card-icon"
-          />
+          <img src="./design/SOURCE_IMAGE/D.png" alt="icon" class="card-icon" />
           <h3><span class="blue">FIRST</span> STEP</h3>
           <p class="title">SEARCH WEB</p>
           <hr />
@@ -68,11 +64,7 @@
         </div>
 
         <div class="card">
-          <img
-            src="../design/SOURCE_IMAGE/D.png"
-            alt="icon"
-            class="card-icon"
-          />
+          <img src="./design/SOURCE_IMAGE/D.png" alt="icon" class="card-icon" />
           <h3><span class="blue">SECOND</span> STEP</h3>
           <p class="title">REGISTER</p>
           <p class="include">INCLUDES FIRST PACKAGE</p>
@@ -87,11 +79,7 @@
         </div>
 
         <div class="card">
-          <img
-            src="../design/SOURCE_IMAGE/D.png"
-            alt="icon"
-            class="card-icon"
-          />
+          <img src="./design/SOURCE_IMAGE/D.png" alt="icon" class="card-icon" />
           <h3><span class="blue">THIRD</span> STEP</h3>
           <p class="title">OPEN LOCKER</p>
           <p class="include">INCLUDES SECOND PACKAGE</p>
@@ -103,7 +91,7 @@
         </div>
       </div>
     </section>
-    <script src="../backend/auth_protect.js"></script>
+    <script src="./backend/auth_protect.js"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
