--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       rel="stylesheet"
     />
     <!-- css -->
-    <link rel="stylesheet" href="../style/main.css" />
-    <link rel="stylesheet" href="../style/main_footer.css" />
-    <link rel="stylesheet" href="../style/main_slide.css" />
-    <link rel="stylesheet" href="../style/main_header.css" />
-    <link rel="stylesheet" href="../style/main_whatwedo.css" />
-    <link rel="stylesheet" href="../style/responsive_main.css" />
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/main_footer.css" />
+    <link rel="stylesheet" href="./style/main_slide.css" />
+    <link rel="stylesheet" href="./style/main_header.css" />
+    <link rel="stylesheet" href="./style/main_whatwedo.css" />
+    <link rel="stylesheet" href="./style/responsive_main.css" />
     <title>Locker Web</title>
   </head>
 
@@ -28,7 +28,7 @@
         <h2>F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="../design/SOURCE_IMAGE/Menu.png"
+            src="./design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -127,7 +127,7 @@
         <div class="img-placeholder">
           <img
             class="rotated-image"
-            src="../design/SOURCE_IMAGE/faceid.png"
+            src="./design/SOURCE_IMAGE/faceid.png"
             alt="Design"
           />
         </div>
@@ -135,7 +135,7 @@
     </section>
 
     <!-- include JS ở cuối body -->
-    <script src="../animation/wwd.jsx"></script>
+    <script src="./animation/wwd.jsx"></script>
 
     <!-- slide -->
     <!-- slide -->
@@ -202,17 +202,17 @@
 
       <div class="slider-controls">
         <button class="prev">
-          <img src="../design/SOURCE_IMAGE/buttonleft.png" alt="Previous" />
+          <img src="./design/SOURCE_IMAGE/buttonleft.png" alt="Previous" />
         </button>
         <button class="next">
-          <img src="../design/SOURCE_IMAGE/buttonright.png" alt="Next" />
+          <img src="./design/SOURCE_IMAGE/buttonright.png" alt="Next" />
         </button>
       </div>
     </section>
 
     <!-- include JS ở cuối body -->
-    <script src="../animation/slider.jsx"></script>
-    <script src="../backend/auth_protect.js"></script>
+    <script src="./animation/slider.jsx"></script>
+    <script src="./backend/auth_protect.js"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
