--- a/open.html
+++ b/open.html
@@ -10,21 +10,19 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <title>Open - Start Your Journey</title>
     <!-- css -->
-    <title>Sign up - F-LOCK</title>
-    <link rel="stylesheet" href="../style/main_header.css" />
-    <link rel="stylesheet" href="../style/main_footer.css" />
-    <link rel="stylesheet" href="../style/pass_lock.css" />
+    <link rel="stylesheet" href="./style/main_header.css" />
+    <link rel="stylesheet" href="./style/main_footer.css" />
+    <link rel="stylesheet" href="./style/open.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
-  </head>
-  <body>
     <!-- menu -->
     <section class="o">
       <div class="menu">
         <h2>F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="../design/SOURCE_IMAGE/Menu.png"
+            src="./design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -34,32 +32,50 @@
     </section>
     <!-- header -->
     <div class="header">
-      <p id="row1">SIGN UP</p>
-      <h1>Please enter the password</h1>
-      <p id="row3"></p>
+      <p id="row1">Work</p>
+      <h1>Open Locker</h1>
+
+      <p id="row3">
+        Please keep your face in position for recognition scanning
+      </p>
     </div>
-
-    <!-- Form đăng nhập -->
-    <div class="register-container login-container">
-      <div class="right-side">
-        <form id="loginForm">
-          <div class="form-group full">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required />
-          </div>
-
-          <button type="submit" class="btn">Register</button>
-          <div class="register-link">
-            If you want register face id, please click
-            <a href="./face_id.html">Face id</a>
-          </div>
-        </form>
+  </head>
+  <body>
+    <!-- Content -->
+    <div class="face-grid-section">
+      <div class="grid-container">
+        <a href="./scan.html" class="grid-item">
+          <span>01</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>02</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>03</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>04</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>05</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>06</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>07</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>08</span>
+        </a>
+        <a href="./scan.html" class="grid-item">
+          <span>09</span>
+        </a>
       </div>
     </div>
     <!-- script -->
-    <script src="../backend/logon.js"></script>
+    <script src="./backend/auth_protect.js"></script>
   </body>
-
   <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
@@ -70,6 +86,7 @@
           biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
           mật hơn!
         </p>
+
         <nav class="footer-nav">
           <a href="./index.html">Home</a>
           <a href="./guild.html">User Guide</a>
