--- a/register.html
+++ b/register.html
@@ -12,9 +12,9 @@
     />
     <title>Register - Start Your Journey</title>
     <!-- css -->
-    <link rel="stylesheet" href="../style/main_header.css" />
-    <link rel="stylesheet" href="../style/register.css" />
-    <link rel="stylesheet" href="../style/main_footer.css" />
+    <link rel="stylesheet" href="./style/main_header.css" />
+    <link rel="stylesheet" href="./style/register.css" />
+    <link rel="stylesheet" href="./style/main_footer.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
   </head>
   <body>
@@ -24,7 +24,7 @@
         <h2>F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="../design/SOURCE_IMAGE/Menu.png"
+            src="./design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -44,7 +44,7 @@
       <!-- Bên trái: Ảnh -->
       <div class="left-side">
         <a href="./face_res.html"
-          ><img src="../design/SOURCE_IMAGE/scan.jpg" alt="Scan Face"
+          ><img src="./design/SOURCE_IMAGE/scan.jpg" alt="Scan Face"
         /></a>
       </div>
 
@@ -126,7 +126,7 @@
 
     <!-- ... script ... -->
 
-    <script src="../backend/register.js"></script>
+    <script src="./backend/register.js"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
