--- a/logon.html
+++ b/logon.html
@@ -10,19 +10,21 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <title>Open - Start Your Journey</title>
     <!-- css -->
-    <link rel="stylesheet" href="../style/main_header.css" />
-    <link rel="stylesheet" href="../style/main_footer.css" />
-    <link rel="stylesheet" href="../style/open.css" />
+    <title>Sign up - F-LOCK</title>
+    <link rel="stylesheet" href="./style/main_header.css" />
+    <link rel="stylesheet" href="./style/main_footer.css" />
+    <link rel="stylesheet" href="./style/logon.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
+  </head>
+  <body>
     <!-- menu -->
     <section class="o">
       <div class="menu">
         <h2>F-LOCK</h2>
         <a href="./menu.html">
           <img
-            src="../design/SOURCE_IMAGE/Menu.png"
+            src="./design/SOURCE_IMAGE/Menu.png"
             alt="menu"
             class="icon_menu"
           />
@@ -32,50 +34,36 @@
     </section>
     <!-- header -->
     <div class="header">
-      <p id="row1">Work</p>
-      <h1>Open Locker</h1>
-
-      <p id="row3">
-        Please keep your face in position for recognition scanning
-      </p>
+      <p id="row1">SIGN IN</p>
+      <h1>Ready to take the next step?</h1>
+      <p id="row3">Fill out the form to start your journey with us</p>
     </div>
-  </head>
-  <body>
-    <!-- Content -->
-    <div class="face-grid-section">
-      <div class="grid-container">
-        <a href="./scan.html" class="grid-item">
-          <span>01</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>02</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>03</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>04</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>05</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>06</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>07</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>08</span>
-        </a>
-        <a href="./scan.html" class="grid-item">
-          <span>09</span>
-        </a>
+
+    <!-- Form đăng nhập -->
+    <div class="register-container login-container">
+      <div class="right-side">
+        <form id="loginForm">
+          <div class="form-group full">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
+          </div>
+
+          <div class="form-group full">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required />
+          </div>
+
+          <button type="submit" class="btn">LOG ON</button>
+          <div class="register-link">
+            If you don’t have an account, please
+            <a href="./register.html">Register</a>
+          </div>
+        </form>
       </div>
     </div>
-    <!-- script -->
-    <script src="../backend/auth_protect.js"></script>
+    <script src="./backend/logon.js"></script>
   </body>
+
   <!-- footer -->
   <footer class="footer">
     <div class="footer-content">
