--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../style/menu.css" />
+    <link rel="stylesheet" href="./style/menu.css" />
     <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
     <title>Menu - F-LOCK</title>
   </head>
@@ -32,7 +32,7 @@
       <div class="right-side">
         <div class="out">
           <a href="./index.html"
-            ><img src="../design/SOURCE_IMAGE/Xpng.png" alt="out"
+            ><img src="./design/SOURCE_IMAGE/Xpng.png" alt="out"
           /></a>
         </div>
         <div class="form-container">
@@ -46,6 +46,6 @@
       </div>
     </div>
     <!-- script -->
-    <script src="../backend/menu.js"></script>
+    <script src="./backend/menu.js"></script>
   </body>
 </html>
